fix routing issue with courses module

--- a/src/main/webapp/app/courses/courses.component.html
+++ b/src/main/webapp/app/courses/courses.component.html
@@ -4,3 +4,12 @@
 <div class="container-fluid">
     <h1>Courses</h1>
 </div>
+<div class="container-fluid">
+    <h1>Courses</h1>
+</div>
+<div class="container-fluid">
+    <h1>Courses</h1>
+</div>
+<div class="container-fluid">
+    <h1>Courses</h1>
+</div>
