--- a/src/main/webapp/app/layouts/pi-main/pi-main.component.html
+++ b/src/main/webapp/app/layouts/pi-main/pi-main.component.html
@@ -2,5 +2,5 @@
     <router-outlet name="jhi-pi-navbar"></router-outlet>
 </div>
 <div class="container-fluid">
-   <h1>Brayan</h1>
+    <router-outlet></router-outlet>
 </div>
