--- a/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
+++ b/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
@@ -6,7 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/']" href="#">Home</a>
                 </li>
                 <li class="nav-item">
