--- a/src/main/webapp/app/courses/courses.component.html
+++ b/src/main/webapp/app/courses/courses.component.html
@@ -1,15 +1,4 @@
-<div>
-    <router-outlet name="jhi-pi-navbar"></router-outlet>
-</div>
-<div class="container-fluid">
-    <h1>Courses</h1>
-</div>
-<div class="container-fluid">
-    <h1>Courses</h1>
-</div>
-<div class="container-fluid">
-    <h1>Courses</h1>
-</div>
-<div class="container-fluid">
-    <h1>Courses</h1>
+
+<div class="container">
+    Courses
 </div>
