--- a/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
+++ b/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
@@ -10,13 +10,13 @@
                     <a class="nav-link" [routerLink]="['/']" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/']">Forum</a>
+                    <a class="nav-link" [routerLink]="['/forum']">Forum</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/courses']">Courses</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/">My profile</a>
+                    <a class="nav-link" [routerLink]="['/profile']">My profile</a>
                 </li>
             </ul>
         </div>
