Creation of the course view

--- a/src/main/webapp/app/forum/forum.component.html
+++ b/src/main/webapp/app/forum/forum.component.html
@@ -1,6 +1,6 @@
-<div>
-    <router-outlet name="jhi-pi-navbar"></router-outlet>
+<div class="container">
+    <h3>
+        Forum
+    </h3>
 </div>
-<p>
-  forum works!
-</p>
+
