--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -1,26 +1,7 @@
-<div>
-    <router-outlet name="jhi-pi-navbar"></router-outlet>
+<div class="container">
+    <h3>
+        Profile
+    </h3>
 </div>
-<p>
-  profile works!
-</p>
-<p>
-    profile works!
-</p>
-<p>
-    profile works!
-</p>
-
-<p>
-    profile works!
-</p>
-
-<p>
-    profile works!
-</p>
-
-<p>
-    profile works!
-</p>
 
 
