link course link to new entity

--- a/src/main/webapp/app/courses/courses.component.html
+++ b/src/main/webapp/app/courses/courses.component.html
@@ -51,6 +51,8 @@
             </div>
         </li>
     </ul>
+
+    <jhi-course-pi></jhi-course-pi>
     <button type="button" class="btn btn-primary"  data-toggle="modal" data-target="#add-course">Add Course</button>
     <!-- Modal -->
     <div class="modal fade" id="add-course" tabindex="-1" role="dialog" aria-labelledby="add-courseTitle" aria-hidden="true">
