--- a/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
+++ b/src/main/webapp/app/layouts/pi-navbar/pi-navbar.component.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" [routerLink]="['/forum']">Forum</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/courses']">Courses</a>
+                    <a class="nav-link" [routerLink]="['/course-pi']">Courses</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/profile']">My profile</a>
